<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_light"
    tools:context=".MainActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/mainActivity_logo"
            android:background="@drawable/store_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/store_name_uppercase"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_name_uppercase"
            android:textSize="50sp"
            android:id="@+id/mainActivity_app_name"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/mainActivity_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textSize="20sp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/mainActivity_app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="50dp"
        android:background="@drawable/round_corner_launch_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864"
        tools:layout_editor_absoluteX="49dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/login_btn"
            android:text="@string/Sign_in"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/signup_btn"
            android:text="@string/Sign_up" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>